objects/Training_Registration__c.object
<CustomObject>
    <description>used to track training registrations</description>
    <fields>
        <fullName>Attendee_Company__c</fullName>
        <formula>Attendee__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Email__c</fullName>
        <formula>Attendee__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Phone__c</fullName>
        <formula>Attendee__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>contact linked</description>
        <label>Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_Code__c</fullName>
        <formula>Authorization__r.Authorization_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorization Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AuthCode__c.Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Use &quot;AC&quot; for the search criteria instead of the Auth Code</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AuthCode__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Special Requests, Topics of Interest, General Comments</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Training Mgr and Instructor to manage this field</inlineHelpText>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diet__c</fullName>
        <inlineHelpText>Special Dietary Considerations? We will contact you for more information if yes</inlineHelpText>
        <label>Diet</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Training_Events__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Polo_Shirt_Size__c</fullName>
        <label>Polo Shirt Size</label>
        <picklist>
            <picklistValues>
                <fullName>XS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XXXL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Qty</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social__c</fullName>
        <inlineHelpText>Participate in a class dinner sponsored by Silver Peak?</inlineHelpText>
        <label>Social</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suppress_Confirmation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you do not want the registrant to receive an email confirming their registration.</inlineHelpText>
        <label>Suppress Confirmation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <label>Registration</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Registration Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>